--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,6 @@
       <div id="site" class="content"></div>
     </div>
 
-    <script src="index.js"></script>
+    <script src="index.js" type="module"></script>
   </body>
 </html>
